correción cuando la búsqueda no existe

--- a/src/app/Componentes/app-footer/app-footer.component.html
+++ b/src/app/Componentes/app-footer/app-footer.component.html
@@ -9,18 +9,18 @@
   <body>
     <div class="appFooter">
       <div class="contacto">
-        <a href="https://www.youtube.com/watch?v=zPlSchfBDIw">
+        <a href="https://www.youtube.com/watch?v=zPlSchfBDIw" target="_blank">
           <i class="bi bi-github" style="color: black">GitHub</i>
         </a>
-        <a href="https://www.youtube.com/watch?v=dmuKbL_bms8">
+        <a href="https://www.youtube.com/watch?v=dmuKbL_bms8" target="_blank">
           <i class="bi bi-whatsapp" style="color: black">0101010101</i>
         </a>
-        <a href="https://www.youtube.com/watch?v=W-6ESnHUhiY">
+        <a href="https://www.youtube.com/watch?v=W-6ESnHUhiY" target="_blank">
           <i class="bi bi-envelope-fill" style="color: black"
             >libros@vicio.com</i
           >
         </a>
-        <a href="https://www.youtube.com/watch?v=QCtGV213YiE"
+        <a href="https://www.youtube.com/watch?v=QCtGV213YiE" target="_blank"
           ><i class="bi bi-youtube" style="color: black"
             >Librería 'El Vicio'</i
           ></a
