Refactor main page using new Api

--- a/src/app/Componentes/app-footer/app-footer.component.html
+++ b/src/app/Componentes/app-footer/app-footer.component.html
@@ -27,10 +27,10 @@
         >
       </div>
       <div class="informacion">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis qui
-        assumenda, laudantium error itaque illum est ullam commodi deleniti nam
-        dolor incidunt, consequuntur quas modi optio, consequatur dicta eligendi
-        cum.
+        “No es verdad que las personas dejen de perseguir sueños porque se hacen
+        viejas, sino que se hacen viejas porque dejan de perseguir sus
+        sueños”<br />
+        -Gabriel García Márquez
       </div>
       <div class="frecuentes">
         <a (click)="muyPronto()">Sucursales</a>
