--- a/src/app/Componentes/products-presentation/products-presentation.component.css
+++ b/src/app/Componentes/products-presentation/products-presentation.component.css
@@ -8,6 +8,14 @@
   background-color: #f6edd9;
 }
 
+.headerPresentationcontainer {
+  padding: 20px;
+}
+
+.page-item {
+  padding: 10px;
+}
+
 .pagination {
   padding-top: 15px;
   padding-bottom: 15px;
