--- a/src/app/Componentes/item/item-cart.component.css
+++ b/src/app/Componentes/item/item-cart.component.css
@@ -17,8 +17,24 @@
   height: 500px;
 }
 
+.card-title {
+  height: 25%;
+  -webkit-line-clamp: 2;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
 .card img {
   width: 100%;
-  height: 200px;
+  height: 45%;
   object-fit: cover;
+}
+
+.textContainer {
+  -webkit-line-clamp: 3;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  font-size: 18px;
 }
