--- a/src/app/Componentes/app-header/app-header.component.css
+++ b/src/app/Componentes/app-header/app-header.component.css
@@ -19,11 +19,13 @@
   color: #392a46;
   font-family: "Oleo Script Swash Caps", cursive;
   font-size: 40px;
+  text-align: center;
 }
 
 button {
   height: 80%;
-  width: 6%;
+  width: 5%;
+  border-radius: 10px;
   margin: auto;
   margin-left: 10px;
   margin-right: 10px;
@@ -33,6 +35,43 @@ button {
   border: none;
 }
 
+.bi {
+  font-size: xx-large;
+  color: #ffffff;
+}
+
 button:disabled {
   background: #ccc;
+}
+
+@media (max-width: 1350px) {
+  button {
+    width: 8%;
+  }
+}
+
+@media (max-width: 700px) {
+  .appName {
+    font-size: 30px;
+  }
+  button {
+    width: 8%;
+    height: 60%;
+  }
+  .bi {
+    font-size: large;
+  }
+}
+
+@media (max-width: 400px) {
+  .appName {
+    font-size: 26px;
+  }
+  button {
+    width: 10%;
+    height: 50%;
+  }
+  .bi {
+    font-size: medium;
+  }
 }
