--- a/src/app/Componentes/app-header/app-header.component.html
+++ b/src/app/Componentes/app-header/app-header.component.html
@@ -9,24 +9,23 @@
   </head>
   <body>
     <div class="appHeader">
-      <button routerLink="">
-        <i class="bi bi-house" style="font-size: 150%; color: white"></i>
+      <button routerLink="" class="headerBtn">
+        <i class="bi bi-house"></i>
       </button>
-      <button routerLink="/Cart" [disabled]="!logged">
-        <i class="bi bi-cart3" style="font-size: 150%; color: white"></i>
+      <button routerLink="/Cart" class="headerBtn" [disabled]="!logged">
+        <i class="bi bi-cart3"></i>
       </button>
       <p class="appName">Librería "El Vicio"</p>
-      <button routerLink="/Log" [disabled]="logged">
-        <i
-          class="bi bi-person-circle"
-          style="font-size: 150%; color: white"
-        ></i>
+      <button routerLink="/Log" class="headerBtn" [disabled]="logged">
+        <i class="bi bi-person-circle"></i>
       </button>
-      <button routerLink="/" [disabled]="!logged" (click)="logOut()">
-        <i
-          class="bi bi-box-arrow-right"
-          style="font-size: 150%; color: white"
-        ></i>
+      <button
+        routerLink="/"
+        class="headerBtn"
+        [disabled]="!logged"
+        (click)="logOut()"
+      >
+        <i class="bi bi-box-arrow-right"></i>
       </button>
     </div>
   </body>
