--- a/src/app/Componentes/item/item-cart.component.css
+++ b/src/app/Componentes/item/item-cart.component.css
@@ -1,20 +1,21 @@
 .itemsContariner {
   width: 100%;
   background-color: #f6edd9;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
 }
 
-.row {
-  width: 100%;
-  background-color: #f6edd9;
-}
-
-.col {
+.cardContainer {
+  display: block;
   width: 25%;
+  height: 500px;
+  padding: 10px;
 }
 
 .card {
   width: 100%;
-  height: 500px;
+  height: 100%;
 }
 
 .card-title {
@@ -37,4 +38,28 @@
   -webkit-box-orient: vertical;
   overflow: hidden;
   font-size: 18px;
+}
+
+@media (max-width: 1500px) {
+  .cardContainer {
+    width: 20%;
+  }
+}
+
+@media (max-width: 1000px) {
+  .cardContainer {
+    width: 30%;
+  }
+}
+
+@media (max-width: 780px) {
+  .cardContainer {
+    width: 50%;
+  }
+}
+
+@media (max-width: 480px) {
+  .cardContainer {
+    width: 100%;
+  }
 }
