--- a/src/app/Componentes/item/item-cart.component.html
+++ b/src/app/Componentes/item/item-cart.component.html
@@ -8,28 +8,24 @@
   </head>
   <body>
     <div class="itemsContariner">
-      <div class="row row-cols-4 row-cols-md-4 g-4">
-        <div class="col" *ngFor="let libro of librosFiltrados">
-          <div class="card">
-            <img src="{{ libro[3] }}" class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">{{ libro[0] | uppercase }}</h5>
-              <p><b>Disponibilidad: </b>{{ libro[1] }}</p>
-              <div class="textContainer">
-                <b>Descripción: </b> {{ libro[2] }}
-              </div>
-            </div>
-            <div class="card-footer">
-              <button
-                type="button"
-                class="btn btn-primary btn-sm"
-                font
-                (click)="addToCart(libro)"
-                [disabled]="!logged"
-              >
-                Añadir al carrito
-              </button>
-            </div>
+      <div class="cardContainer" *ngFor="let libro of libros">
+        <div class="card">
+          <img src="{{ libro[3] }}" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">{{ libro[0] | uppercase }}</h5>
+            <p><b>Disponibilidad: </b>{{ libro[1] }}</p>
+            <div class="textContainer"><b>Descripción: </b> {{ libro[2] }}</div>
+          </div>
+          <div class="card-footer">
+            <button
+              type="button"
+              class="btn btn-primary btn-sm"
+              font
+              (click)="addToCart(libro)"
+              [disabled]="!logged"
+            >
+              Añadir al carrito
+            </button>
           </div>
         </div>
       </div>
