--- a/src/app/Componentes/user-controller/user-controller.component.html
+++ b/src/app/Componentes/user-controller/user-controller.component.html
@@ -8,77 +8,70 @@
   </head>
   <body>
     <app-loading-spinner [isLoading]="isLoading"></app-loading-spinner>
-
-    <div class="loginContainer">
-      <form class="logForm">
-        <!-- Email input -->
-        <div class="form-outline mb-4">
-          <label class="form-label" for="form2Example1"
-            >Nombre de usuario</label
+    <section
+      class="vh-100 bg-image"
+      style="
+        background-image: url('https://images.unsplash.com/photo-1525358180237-7399f908a1d9?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1178');
+      "
+    >
+      <div class="mask d-flex align-items-center h-100 gradient-custom-3">
+        <div class="container h-100">
+          <div
+            class="row d-flex justify-content-center align-items-center h-100"
           >
-          <input type="email" id="form2Example1" class="form-control" />
-        </div>
+            <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+              <div class="card" style="border-radius: 15px">
+                <div class="card-body p-5">
+                  <h2 class="text-uppercase text-center mb-5">Inicia sesión</h2>
 
-        <!-- Password input -->
-        <div class="form-outline mb-4">
-          <label class="form-label" for="form2Example2">Contraseña</label>
-          <input type="password" id="form2Example2" class="form-control" />
-        </div>
+                  <form>
+                    <div class="form-outline mb-4">
+                      <input
+                        type="email"
+                        id="form3Example3cg"
+                        class="form-control form-control-lg"
+                        [(ngModel)]="correo"
+                        [ngModelOptions]="{ standalone: true }"
+                      />
+                      <label class="form-label" for="form3Example3cg"
+                        >Tu dirección de correo electrónico</label
+                      >
+                    </div>
 
-        <!-- 2 column grid layout for inline styling -->
-        <div class="row mb-4">
-          <div class="col d-flex justify-content-center">
-            <!-- Checkbox -->
-            <div class="form-check">
-              <input
-                class="form-check-input"
-                type="checkbox"
-                value=""
-                id="form2Example31"
-                checked
-              />
-              <label class="form-check-label" for="form2Example31">
-                Remember me
-              </label>
+                    <div class="form-outline mb-4">
+                      <input
+                        type="password"
+                        id="form3Example4cg"
+                        class="form-control form-control-lg"
+                        [(ngModel)]="password"
+                        [ngModelOptions]="{ standalone: true }"
+                      />
+                      <label class="form-label" for="form3Example4cg"
+                        >Contraseña</label
+                      >
+                    </div>
+
+                    <div class="d-flex justify-content-center">
+                      <button
+                        type="button"
+                        class="btn btn-success btn-block btn-lg gradient-custom-4 text-body"
+                        (click)="this.ingresar()"
+                      >
+                        Iniciar sesión
+                      </button>
+                    </div>
+
+                    <p class="text-center text-muted mt-5 mb-0">
+                      ¿No tienes una cuenta?
+                      <a routerLink="/register" href="#!"><u>Regístrate</u></a>
+                    </p>
+                  </form>
+                </div>
+              </div>
             </div>
           </div>
-
-          <div class="col">
-            <!-- Simple link -->
-            <a href="#!">Forgot password?</a>
-          </div>
         </div>
-
-        <!-- Submit button -->
-        <button
-          type="button"
-          class="btn btn-primary btn-block mb-4"
-          (click)="this.ingresar()"
-        >
-          Sign in
-        </button>
-
-        <!-- Register buttons -->
-        <div class="text-center">
-          <p>Not a member? <a href="#!">Register</a></p>
-          <p>or sign up with:</p>
-          <button type="button" class="btn btn-link btn-floating mx-1">
-            <i class="fab fa-facebook-f"></i>
-          </button>
-
-          <button type="button" class="btn btn-link btn-floating mx-1">
-            <i class="fab fa-google"></i>
-          </button>
-
-          <button type="button" class="btn btn-link btn-floating mx-1">
-            <i class="fab fa-twitter"></i>
-          </button>
-
-          <button type="button" class="btn btn-link btn-floating mx-1">
-            <i class="fab fa-github"></i>
-          </button>
-        </div>
-      </form>
-    </div>
+      </div>
+    </section>
   </body>
 </html>
